# CPU_Scheduling_Simulator

./: .env.example  .gitignore  ALGORITHMS.md  CMakeLists.txt  FCFS.h  FILE_INPUT_GUIDE.md  PriorityScheduler.h  Process.h  README.md  RoundRobin.cpp  SJF.h  Scheduler.cpp  build.bat  build.sh  edf_execution_report.txt  input.txt  main.cpp  test_input.txt
algorithms/: FCFS.cpp  FCFS.h  PriorityScheduler.cpp  PriorityScheduler.h  SJF.cpp  SJF.h
data/: priority_test.txt  sample1.txt  sample2.txt
include/: AIWorkloadGenerator.h  AdaptiveSchedulerAnalyzer.h  CPUCore.h  CPUProcess.h  CPURuntime.h  Comparison.h  ContextSwitch.h  DashboardRenderer.h  FCFS.h  FileHandler.h  Metrics.h  PluginManager.h  PriorityScheduler.h  Process.h  ReportGenerator.h  RoundRobin.h  SJF.h  SRTF.h  Scheduler.h  SchedulerRegistry.h  SimulatorUI.h  TimerInterrupt.h  Utils.h
plugins/: EDFScheduler.cpp  RoundRobinScheduler.cpp
src/: AIWorkloadGenerator.cpp  AdaptiveSchedulerAnalyzer.cpp  CPUCore.cpp  CPUProcess.cpp  CPURuntime.cpp  Comparison.cpp  ContextSwitch.cpp  DashboardRenderer.cpp  FCFS.cpp  FileHandler.cpp  PluginManager.cpp  PriorityScheduler.cpp  Process.cpp  ReportGenerator.cpp  RoundRobin.cpp  SJF.cpp  SRTF.cpp  Scheduler.cpp  SchedulerRegistry.cpp  SimulatorUI.cpp  Utils.cpp  main.cpp
